# _project_template

./: Changelog.md  README.md  cookiecutter.json  update_uv_requirements.sh
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_slug }}/: Makefile  README.md  notes.md  pyproject.toml  requirements.txt
{{ cookiecutter.project_slug }}/metadata/: authors.csv  samples.csv
{{ cookiecutter.project_slug }}/src/: __init__.py  _config.py  analysis.py  ops.py  types.py  utils.py
