[project]
name = "{{ cookiecutter.project_slug }}"
authors = [
    {name = "{{ cookiecutter.username }}", email = "{{ cookiecutter.email }}"},
]
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
keywords = [
    "computational biology",
    "bioinformatics",
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 3 - Alpha",
    "Typing :: Typed",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
license = {text = "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"}
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.11.4",
    "cloudpickle>=3.1.1",
    "fa2-modified>=0.3.10",
    "fastcluster>=1.2.6",
    "igraph>=0.11.9",
    "leidenalg>=0.10.2",
    "matplotlib>=3.10.3",
    "networkx>=3.4.2",
    "numpy>=1.26.4",
    "pandas>=2.3.0",
    "parmap>=1.7.0",
    "pingouin>=0.5.5",
    "pyarrow>=20.0.0",
    "pymde>=0.1.18",
    "scanpy>=1.11.3",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "seaborn-extensions>=0.2.1",
    "tqdm>=4.67.1",
]
dynamic = ['version']

[dependency-groups]
dev = [
    "black[d]>=25.1.0",
    "git-lint>=0.1.2",
    "ipython>=8.37.0",
    "mypy>=1.16.1",
    "pylint>=3.3.7",
    "rich>=14.0.0",
    "taskipy>=1.14.1",
]

[project.urls]
homepage = "https://github.com/rendeirolab/{{ cookiecutter.project_slug }}"
documentation = "https://github.com/rendeirolab/{{ cookiecutter.project_slug }}/blob/main/README.md"
repository = "https://github.com/rendeirolab/{{ cookiecutter.project_slug }}"

[build-system]
requires = ["setuptools_scm[toml]>=6.0"]

[tool.taskipy.settings]
use_vars = true

[tool.taskipy.variables]
project_slug = "{% if cookiecutter.project_slug %}{{ cookiecutter.project_slug }}{% else %}$(basename `pwd`){% endif %}"
current_date = "$(date -u +\"%Y-%m-%d %H:%M:%S UTC\")"

[tool.taskipy.tasks]
requirements = { cmd = "{% if cookiecutter.management == 'uv' -%}uv sync --extra dev{%- else -%}pip install .{%- endif %}", help = "Install Python requirements" }
backup_time = { cmd = "sh -c 'echo \"Last backup: {current_date}\" >> _backup_time && chmod 600 _backup_time'", help = "Record the last backup time" }
sync = { cmd = "rsync --copy-links --progress -r . {{ cookiecutter.username }}@login:projects/{project_slug} && task backup_time", help = "Sync data/code to HPC cluster" }
interactive = { cmd = "{% if cookiecutter.management == 'uv' -%}uv run --extra dev {%- endif %} python -m IPython -i src/analysis.py", help = "Start an interactive IPython session" }
analysis = { cmd = "{% if cookiecutter.management == 'uv' -%}uv run {%- endif %}python -u src/analysis.py", help = "Run all analysis steps" }
figures = { cmd = "cd figures && bash process.sh", help = "Produce figures in various formats" }

[tool.setuptools]
license-files = []  # https://github.com/astral-sh/uv/issues/9513

[tool.setuptools_scm]
write_to = {% if cookiecutter.project_type == "software" -%} "{{ cookiecutter.project_slug }}/_version.py" {%- elif cookiecutter.project_type == "research" -%} "_version.py" {%- endif %}
write_to_template = 'version = __version__ = "{version}"'

[tool.black]
line-length = 90
target-version = ['py312']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.mypy]
python_version = '3.12'
warn_return_any = true
warn_unused_configs = true

# Packages without type annotations in shed yet
[[tool.mypy.overrides]]
module = [
    'numpy.*',
    'pandas.*',
    'scipy.*',
    'skimage.*',
    'matplotlib.*',
    'networkx.*',
    'pingouin.*',
    'tqdm.*',
    'anndata.*',
    'scanpy.*',
    {% if cookiecutter.project_type == "software" -%} '{{ cookiecutter.project_slug }}.*' {%- endif %}
]
ignore_missing_imports = true
